test/sema/exercise/member_expr_assignment.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S { x: number }
struct S2 { x: number }

fn main(): void {
  var s = S { x: 0 };
  var s2 = S2 { x: 0 };

  s.x = 1;
  s2.x = s2;
  // CHECK: [[# @LINE - 1 ]]:10: error: an expression of type 'S2' cannot be assigned to a variable of type 'number'
}
